resolve dark mode problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ a:active {
 nav {
     position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     width: 100%;
     height: 90px;
     line-height: 90px;
@@ -158,7 +158,7 @@ nav {
 .nav-menu .nav_list {
     list-style: none;
     position: relative;
-    margin-inline: 20px;
+    margin-inline: 10px;
 }
 
 .nav-link {
@@ -514,6 +514,7 @@ footer{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
         background: rgba(255, 255, 255, 0.7);
         -webkit-backdrop-filter: blur(20px);
         backdrop-filter: blur(20px);
@@ -534,11 +535,7 @@ footer{
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 10px; /* Adjust margin for spacing */
-    }
-
-    .dark-mode-btn {
-        margin-right: 20px; /* Adjust margin for spacing */
+        margin-right: 50px;
     }
     .featured-box{
         flex-direction: column;
@@ -587,7 +584,7 @@ footer{
         width: 80%;
     }
 }
-/* ----- MEDIA QUERY == 540px / RESPONSIVE ----- */
+/* ----- MEDIA QUERY == 600px / RESPONSIVE ----- */
 @media only screen and (max-width: 600px){
 
     /* Skills section */
